--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1139,3 +1139,15 @@ body {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
+
+.reveal div#multicolumn{
+    -moz-column-count: 2;
+    -moz-column-gap: 50%;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 50%;
+    column-count: 3;
+    column-gap: 50%;
+}
+.reveal .child{
+    height:20px;
+}
