--- a/css/theme/serif.css
+++ b/css/theme/serif.css
@@ -11,12 +11,12 @@
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #F0F1EB;
-  background-color: #F0F1EB; }
+  background: #FFF;
+  background-color: #FFF; }
 
 .reveal {
-  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
-  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 28px;
   font-weight: normal;
   color: #000; }
 
@@ -35,7 +35,7 @@ body {
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   margin: 0 0 20px 0;
   color: #383D3D;
-  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
@@ -44,10 +44,10 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 2.00em; }
 
 .reveal h2 {
-  font-size: 1.5em; }
+  font-size: 1.8em; }
 
 .reveal h3 {
   font-size: 1.55em; }
@@ -205,10 +205,7 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
-  background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
-
+}
 .reveal a img {
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
